App styleguide #575: fixed for Chrome/Webkit opacity and alignment of Navbar buttons.

--- a/prototypes/app/source/css/components/AppNav.styl
+++ b/prototypes/app/source/css/components/AppNav.styl
@@ -98,12 +98,29 @@
         text-overflow: clip !important;
     }
 
+    // Disable active opacity from SmartNavBar to avoid
+    // visually conflicts with the transition
+    .SmartNavBar-btn:active {
+        opacity: inherit;
+    }
+
     .navbar-toggle {
         transitionNavSetup();
     
         > * {
             transitionNavSetup();
             opacity: 1;
+    
+            // display added for Chrome/Webkit, for some strange reason
+            // inline does not hides the children with opacitiy:0 and no transition
+            // and 'block' sets the alinment correctly.
+            display: block;
+    
+            > .glyphicon,
+            > .icon {
+                // Fixing alingment on Chrome/Webkit
+                display: block;
+            }
         }
         transform: rotate(0deg);
 
@@ -134,6 +151,7 @@
             > * {
                 opacity: 0;
             }
+
             transform: rotate(180deg);
 
             &:before {
